--- a/parts/1_problem.tex
+++ b/parts/1_problem.tex
@@ -1,76 +1,13 @@
 \chapter{Постановка задачи}
 
-Цель
-Улучшить компилятор Kotlin в JavaScript так, чтобы он генерировал более эффективный в плане производительности код.
+Целью данной работы является улучшить компилятор Kotlin в JavaScript так, чтобы он генерировал более эффективный в плане производительности код.
 
-
-Задачи
-Для достижения данной цели были поставлены следующие задачи
-Изучить аналоги
-Изучить существующие JS виртуальные машины (они давно перестали быть интерпритаторами)
-Выбрать и реализовать тесты производительности для сравнения (бенчмарки)
-Проанализировать результаты тестов и выделить <<узкие места>>
-Предложить способы их оптимизации
-Реализовать предложенные решения
-
-------
-Небольшое введение:
-JavaScript — прототипно-ориентированный скриптовый язык программирования с динамической типизацией. Является диалектом языка ECMAScript.
-Kotlin — статически типизированный объектно-ориентированный язык, разрабатываемый в компании JetBrains. Компилируется в Java байт-код и в JavaScript.
-
----
-
-JavaScript is the x86 of the web
-Brendan Eich (создатель JavaScript)
-
-...JavaScript is the VM of the web. ....
-Douglas Crockford (известный JS-разработчик, создатель JSON)
-
-JavaScript is an assembly language for the Web. ...
-Erik Meijer (language designer из Microsoft,
-<<отец>> LINQ )
-
-Почему JS? JS за последнее время стал очень популярен и его часто называют ассемблером для веба. Сейчас наверно почти для любого языка есть какой нибудь транслятор/компилятор в JS. 
-
----
-Почему JavaScript?
-
-Интерпретатор JS есть почти везде
-JS не очень удобен для разработки больших проектов
-Удобно писать все части системы на одном языке
-
-
-
-Почему так происходит и почему команде котолина нужно изобретать свой ввелосипед? Я вижу несколько основных причин, думаю, общих для всех подобных проектов:
-1. JS есть почти везде (потому что там есть браузер)
-2. Но JS не очень удобен для разработки больших и сложных проектов (да и вообще для разработки)
-3. Удобно писать и серверную и клиентскую часть(если такие есть) на одном языке. Да можно писать серверную часть на JS, но смотри 2
-Дальше мнения могут расходится, например кому то нравится статическая типизация, кому то динамическая у каждого подхода есть свои минусы и плюсы...
-или кому то нравятся много скобочек
-Kotlin новый языка который тоже нуждается в таком трансляторе.
-Ввиду специфики языка не так просто взять и переиспользовать готовые решения. Готовые решения обычно заточены под свой конкретный язык
-Сейчас уже есть какая то реализация данного транслятора, но он еще достаточно далек от того что хотелось бы иметь.
-
----
-
-
-
-
-JavaScript -- это язык програмимрования для Веб. Подовляющее большинство веб-сайтов используют JavaScript, и все современные веб-браузеры -- для настольных компьютеров, игровые приствок, эклектронных планшетов и смартфонов включают интерпритатор JavaScript, что делает JavaScript самым широкоприменимым языком программирования из когда либо существовавших в истории. JavaScript входит в тройку техналогий, которые должны знать  любой веб-разработчик: язык разметки HTML, позволяющий определить содержимов веб-страниц, язык стилей CSS, позволяющий определить внешний вид веб-страниц, и язык программирования JavaScript, позволяющий определять поведение веб-страниц.
-
-JavaScript является высокоуровневым, динамическим, нетипизрованым и интрепретируемым языком программирования, который хорошо подходит для программирования в объектно-ориентированном и функциональном стилях. Свой синтаксис JavaScript унаследовал из языка Java, свои первоклассные функции -- из языка Scheme, а механизм наследования на основе прототипов – из языка Self. 
-
-Название языка «JavaScript» может вводить в заблуждение. За иснлюкечинем поверхностной синтаксической схожести, JavaScript полностью отличается от языка программирования Java. JavaScript давно перерос рамки языка сценариев, превратившись в надежный и эффективный универсальный язык программирования. Последняя версия языка (смотрите врезку) определяет множество новых особенностей, позволяющих использовать его для разработки крупномасштабного программного обеспечения.
-
-
-Чтобы представлять хоть какой-то интерес, каждый язык программирования должен иметь свою платформу, или стандартную библиотеку или API функций для выполнения таких базовых операций, как ввод и  вывод. Ядро языка JavaScript определяет минимальный прикладной интерфейс для работы с текстом, массивами, датами и регулярными выражениями, но в нем отсутствуют операции ввода-вывода. Ввод и вывод (а также более сложные возможности, такие как сетевые взаимодействия, сохранение данных и работа с графикой) перекладываются на «окружающую среду», куда встраивается JavaScript. Обычно роль окружающей среды играет веб-броузер (однако в главе 12 мы увидим два примера использования JavaScript без привлечения веб-броузера).
-
-JavaScript – объектно-ориентированный язык, но используемая в нем объектная модель в корне отличается от модели, используемой в большинстве других языков. 
-
-
----
-
-JavaScript: названия и версии
-JavaScript был создан в компании Netscape на заре зарождения Веб. Название «JavaScript» является торговой маркой, зарегистрированной компанией Sun Microsystems (ныне Oracle), и  используется для обозначения реализации языка, созданной компанией Netscape (ныне Mozilla). Компания Netscape представила язык для стандартизации европейской ассоциации производителей компьютеров ECMA (European Computer Manufacturer’s Association), но из-за юридических проблем с торговыми марками стандартизованная версия языка получила несколько неуклюжее название «ECMAScript». Из-за тех же юридических проблем версия языка от компании Microsoft получила официальное название «JScript». Однако на практике все эти реализации обычно называют JavaScript. В течение прошлого десятилетия все веб-броузеры предоставляли реализацию версии 3 стандарта ECMAScript, и в действительности разработчикам не было необходимости задумываться о номерах версий: стандарт языка был стабилен, а его реализации в веб-броузерах в значительной мере были совместимыми. Недавно(???) вышла новая важная версия стандарта языка под названием ECMAScript 5, и к моменту написания этих строк производители броузеров приступили к созданию его реализации. Эта книга охватывает все нововведения, появившиеся в ECMAScript 5, а также все особенно
-сти, предусмотренные стандартом ECMAScript 3. (Четвертая версия стандарта ECMAScript разрабатывалась много лет, но из-за слишком амбициозных целей так и не была выпущена.) Однако иногда можно встретить упоминание о версии JavaScript, например: JavaScript 1.5 или JavaScript 1.8. Эти номера версий присваивались реализациям JavaScript, выпускаемым компанией Mozilla, причем версия 1.5 соответствует базовому стандарту ECMAScript 3, а более высокие версии включают нестандартные расшире
-ния. Наконец, номера версий также присваиваются отдельным интерпретаторам, или «механизмам» JavaScript. Например, компания Google разрабатывает свой интерпретатор JavaScript под названием V8, и к моменту написания этих строк текущей версией механизма V8 была версия 3.0.\cite{JsDef6}
+Для достижения данной цели были поставлены следующие задачи:
+\begin{enumerate}
+\item Исследовать существующие JS виртуальные машины, чтобы учитывать осбенности их работы в дальнейшей части работы.
+\item Исследовать существующие технологии решения похожих проблем, изучить возможность повторного использования компонентов готовых решений для решения поставленной задачи. Выделить сильные и слабые стороны конкретных решений.
+\item Выбрать и реализовать тесты производительности позволяющие оценить эффективность кода JavaScript,
+полученного в результате трансляции компилятором Kotlin.
+\item Проанализировать результаты тестов и выделить <<узкие места>> в скомпилированном коде.
+\item Предложить и реализовать способы оптимизации выевленных недостатков.
+\end{enumerate}
