add new sources

--- a/bib.bib
+++ b/bib.bib
@@ -43,7 +43,110 @@
 	urldate = {2008-03-03}
 }
 
-@ONLINE{wiki:ru:JS,
+@ONLINE{wiki:V8:en,
+	title = {V8 (JavaScript engine)},
+	howpublished = {\url{http://en.wikipedia.org/wiki/V8_(JavaScript_engine)}}
+}
+
+@ONLINE{wiki:V8:ru,
+	title = {V8 (движок JavaScript)},
+	howpublished = {\href{http://ru.wikipedia.org/wiki/V8\_(%D0%B4%D0%B2%D0%B8%D0%B6%D0%BE%D0%BA\_JavaScript)}{http://ru.wikipedia.org/wiki/V8\_(движок\_JavaScript)}}
+}
+
+
+@ONLINE{wiki:SpiderMonkey:ru,
+	title = {SpiderMonkey},
+	howpublished = {\url{http://ru.wikipedia.org/wiki/SpiderMonkey}}
+}
+
+@ONLINE{wiki:Rhino:ru,
+	title = {Rhino},
+	howpublished = {\url{http://ru.wikipedia.org/wiki/Rhino}}
+}
+
+@ONLINE{wiki:JS:ru,
 	title = {JavaScript},
-	howpublished = {\url{http://ru.wikipedia.org/wiki/JavaScript}},
+	howpublished = {\url{http://ru.wikipedia.org/wiki/JavaScript}}
+}
+
+@ONLINE{wiki:Chakra:en,
+	title = {Chakra},
+	howpublished = {\url{http://en.wikipedia.org/wiki/Chakra_(JScript_engine)}}
+}
+
+@ONLINE{JavaScriptCore,
+	title = {JavaScriptCore},
+	howpublished = {\url{http://trac.webkit.org/wiki/JavaScriptCore}}
+}
+
+@ONLINE{JsQuirks,
+	title = {12 JavaScript quirks},
+	howpublished = {\url{http://www.2ality.com/2013/04/12quirks.html}}
+}
+
+@ARTICLE{KotlinOSP,
+title = {{Язык программирования Kotlin}},
+journal = "Открытые системы",
+number = "09",
+year = "2011",
+issn = "0166-218X",
+url = "http://www.osp.ru/os/2011/09/13011550/",
+howpublished = {\url{http://www.osp.ru/os/2011/09/13011550/}},
+author = {Андрей Бреслав}
+}
+
+@ONLINE{JsIsAsm1,
+	title = {JavaScript is Assembly Language for the Web: Sematic Markup is Dead! Clean vs. Machine-coded HTML},
+	howpublished = {\url{http://www.hanselman.com/blog/JavaScriptIsAssemblyLanguageForTheWebSematicMarkupIsDeadCleanVsMachinecodedHTML.aspx}}
+}
+
+@ONLINE{JsIsAsm2,
+	title = {JavaScript is Assembly Language for the Web: Part 2 - Madness or just Insanity?},
+	howpublished = {\url{http://www.hanselman.com/blog/JavaScriptIsAssemblyLanguageForTheWebPart2MadnessOrJustInsanity.aspx}}
+}
+
+@ONLINE{GWT:overview,
+	title = {Google Web Toolkit Overview},
+	howpublished = {\url{https://developers.google.com/web-toolkit/overview}}
+}
+
+@ONLINE{wiki:GWT:ru,
+	title = {Google Web Toolkit},
+	howpublished = {\url{http://ru.wikipedia.org/wiki/Google_Web_Toolkit}}
+}
+
+@ONLINE{Dart,
+	title = {Dart: a language for structured web programming},
+	author = {Lars Bak},
+	howpublished = {\url{1googlecode.blogspot.ru/2011/10/dart-language-for-structured-web.html}}
+}
+
+@ONLINE{wiki:Dart:en,
+	title = {Dart (programming language)	},
+	howpublished = {\url{http://en.wikipedia.org/wiki/Dart_(programming_language)}}
+}
+
+@ONLINE{langpop,
+	title = {Programming Language Popularity Chart},
+	howpublished = {\url{http://langpop.corger.nl/}}
+}
+
+@ONLINE{CoffeeScript,
+	title = {CoffeeScript},
+	howpublished = {\url{http://coffeescript.org/}}
+}
+
+@ONLINE{wiki:TypeScript,
+	title = {TypeScript},
+	howpublished = {\url{http://ru.wikipedia.org/wiki/TypeScript}}
+}
+
+@ONLINE{TypeScript,
+	title = {TypeScript},
+	howpublished = {\url{http://www.typescriptlang.org/}}
+}
+
+@ONLINE{something,
+	title = {},
+	howpublished = {\url{}}
 }
