--- a/bib.bib
+++ b/bib.bib
@@ -146,6 +146,29 @@ author = {Андрей Бреслав}
 	howpublished = {\url{http://www.typescriptlang.org/}}
 }
 
+@ONLINE{Dromaeo,
+	title = {Dromaeo JavaScript performance test suite.},
+	howpublished = {\url{http://dromaeo.com/}}
+}
+
+@ONLINE{V8:Benchmarks,
+	title = {V8 Benchmark Suite},
+	howpublished = {\url{http://v8.googlecode.com/svn/data/benchmarks/v7/run.html}}
+}
+
+@ONLINE{Octane,
+	title = {Octane},
+	howpublished = {\url{https://developers.google.com/octane/}}
+}
+
+@ARTICLE{ Havlak,
+author = {Robert Hundt},
+title = {{Loop Recognition in C++/Java/Go/Scala}},
+journal = "Scala Days 2011",
+url = "https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf",
+howpublished = {\url{https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf}}
+}
+
 @ONLINE{something,
 	title = {},
 	howpublished = {\url{}}
