--- a/parts/2_overview.tex
+++ b/parts/2_overview.tex
@@ -129,3 +129,5 @@ TypeScript является обратно совместимым с JavaScript 
 
 TypeScript отличается от JavaScript возможностью явного определения типов (статическая типизация), поддержкой использования полноценных классов (как в традиционных объектно-ориентированных языках), а также поддержкой подключения модулей. По идее, подобные нововведения должны повысить скорость разработки, читабельность, рефакторинг и повторное использования кода, осуществлять поиск ошибок на этапе разработки и компиляции, а также скорость выполнения программ.
 Предполагается, что в силу полной обратной совместимости адаптация существующих приложений на новый язык программирования может происходить поэтапно, путём постепенного определения типов. \cite{wiki:TypeScript, TypeScript}
+
+НУЖНЫ ВЫВОДЫ!!!
