--- a/parts/3_impl.tex
+++ b/parts/3_impl.tex
@@ -1,29 +1,21 @@
 \chapter{Реализация}
 
+\section{Выбор языков для сравнения}
+хочется не только понимать что мы улучшились хочется и посмотреть как мы выглядим на фоне остальных
+
 С кем сравниваемся?
 
 JavaScript (бенчмарки от разработчиков v8)
 Dart (бенчмарки от разработчиков)
 Dart2js
 
+Google Web Toolkit
+в паблике тестов производительности нет
 
-Есть набор тестов которые используются практически всеми разработчиками JS движков. И было бы логично взять эти тесты и для моей работы, потому что можно взять использовать уже готовые, написанные специалистами тесты, тем самым исключив предвзятость с моей стороны. И конечно же я тоже опубликую свои тесты и каждый сможет сам провести такие же эксперименты как и я.
+Dart -- есть
 
-Отдельно хочется отметить последний тест -- этот бенчмарк пока еще не является общепринятым, но все же имеется реализация для многих языков. Данный дест был разработан разработчиками их гугла в 2011 с целью сравнения C++, Java, Scala, Go по таким критериями как производительность, объем кода, обхем бинарника, объем используемой памяти. 
-Данный бенчмарк я также переписал на котлин, но пока не исследовал.
+CoffeeScript и TypeScript нет, во многом это объясняется тем, что эти языки не сильно отличаются от JS ??? у них нету кросс библиотек которые нужно поддерживать на разных платформах. Система типов либо вообще не отличается либо незначительно. Более просетое наследование.
 
-Тесты отмеченные одной звездочкой не реализованы.
-
-Richards
-OS kernel simulation benchmark, originally written in BCPL by Martin Richards (539 lines).
-Main focus: property load/store, function/method calls
-Secondary focus: code optimization, elimination of redundant code
-
-Deltablue
-One-way constraint solver, originally written in Smalltalk by John Maloney and Mario Wolczko (880 lines).
-Main focus: polymorphism
-Secondary focus: OO-style programming
----
 Сравниваться со всем кончено получилось бы и пришлось выбрать нескольких.
 Почему именно эти аналоги?
 Ну во первых это реализация на чистом JS, были взяты тесты от разработчиков v8. Я считаю это обязательным пунктом, чтобы показать, понять на сколько мы хуже чем код написанный вручную на целевом языке.(тем более экспертами) И сделать выводы в чем мы хуже и почему, что можно улучшить. А в итого показать на сколько мы хуже или лучше чем такой код.
@@ -33,7 +25,26 @@ Secondary focus: OO-style programming
 Ну и планачка чуть по ниже это js полученный путем трансляции дарт в js
 
 ТО план минимум работать так же хорошо как dart2js, план максимум работать так же хорошо как dart(видимо не всегда достижимый)
----
+
+
+
+\section{Тесты производительности}
+
+Прежде чем начинать пытаться что-то улучшить нужно вырабатать критерии по которым мы сможем проверить на сколько успешными были наши улучшения. А наличие независимых критериев для разных характеристик позволит намнаглядно видить как текйщие изменения влияют на интересуещие нас характеристики. Тем самым, позволив вовремя заметить и отреагировать на ухудшение других характеристик, в результате наших изменений.
+В качестве таких критериев обычно выступают тесты производительности. Кроме того, такие тесты могут помочь в поиске <<узких мест>>.
+
+Ни один современный проект по разработке JavaScript виртуальной машины не обходится без тестов производтиельности. В этих проектах в основном используются два типа тестов. Первый тип это так называемые <<микро-бенчмарки>> -- это тесты созданные для измерения отдельных маленьких частей системы. Ярким пример омтаких тестов является набор тестов от разработчиков из Mozilla -- Dromaeo \cite{Dromaeo}  Другой тип используемых тестов, который часто называют <<макро-бенчмарками>> -- это <<реальные>> программы, либо программы имитирующие поведение <<реальных>> программ. Ярыми привереженцами такого похода являются разработчки использующейся в Chrome вритуальной машины V8 \cite{V8:Benchmarks, Octane}. Все эти тесты находятся в открытом доступе и разработчки проверяют результаты свой работы так же и на тестах кокурентов.
+
+В рамках данной работы для реализации тестов производительность было решено взять за основу тесты Richards и DeltaBlue, которые из набора тестов используемого коммандой V8 \cite{V8:Benchmarks}. Так же в значительной мере на выбор повлиял тот факт что данные тесты являются основными в проекте Dart.
+Кроме этих двух тестов было решено реализовать тест производительности Havlak, разработанный в компании Google для сравнения таких языков как C++, Java, Go и Scala по таким критериям как: производительность, объем кода, обхем бинарника, объем используемой памяти \cite{Havlak}. Позже разработчики из компании Google так же реализовали данный тест и на многих других языках, например на Dart и JavaScript.
+Такой выбор тестов позволил исключить предвзятость при реализации тестов производительности на других языках, т.к. для сравнения с другими языками используются проверенные годами и написанные специалистами тесты. К тому же, все эти тесты находятся в открытом доступе и любой желающий сможет повторить приведенные в данной работе эксперементы.
+
+\subsection{Richards}
+Richards
+OS kernel simulation benchmark, originally written in BCPL by Martin Richards (539 lines).
+Main focus: property load/store, function/method calls
+Secondary focus: code optimization, elimination of redundant code
+
 Richards
 Данный бенчмар симулирует работу ядра ОС, написан в конце 90х Мартином Ричардсом.
 Основной фокс теста -- это чтение и запись данных и вызов функций- методов
@@ -49,7 +60,8 @@ Richards: Выводы
 Сделать аналог импорта, предоставив тем самым возможность кратко обращаться к объектам и их полям
 Необходимо упростить структуру генерируемого кода
 
----
+\subsection{Deltablue}
+
 Deltablue
 constraint solver написанный John Maloney and Mario Wolczko в конце 80х, начале 90х (?)
 Основной фокус данного теста -- полиморфизм, ООП стиль программирования. В тесте очень часто и в большем количестве создаются объекты. Эти объекты живут не очень долго и видимо этот тест так же подходит для тестирования GC, но это нас не сильно интересует
@@ -69,13 +81,11 @@ DeltaBlue: Выводы
 Инициализировать все поля класса в одном порядке
 Заменить или оптимизировать Kotllin.equals
 
----
-Что дальше?
+\subsection{Havlak}
 
-Реализовать предложенные оптимизации
-Написать новые бенчмарки
-
-Если новые бенчмарки не дадут результатов: (или если будет время)
-Inlining функций и функциональных литералов
-Оптимизации на основе  Continuation-passing style и 
-Static single assignment
+\section{Тестирование и анализ результатов}
+\subsection{Методика тестирования}
+\subsection{Richards}
+\subsection{DeltaBlue}
+\subsection{Havlak}
+\section {Реализация оптимизаций}
