Add descriptions for benchmarks (Richards, DeltaBlue, Havlak)

--- a/bib.bib
+++ b/bib.bib
@@ -85,14 +85,14 @@
 }
 
 @ARTICLE{KotlinOSP,
-title = {{Язык программирования Kotlin}},
-journal = "Открытые системы",
-number = "09",
-year = "2011",
-issn = "0166-218X",
-url = "http://www.osp.ru/os/2011/09/13011550/",
-howpublished = {\url{http://www.osp.ru/os/2011/09/13011550/}},
-author = {Андрей Бреслав}
+	author = {Андрей Бреслав},
+	title = {{Язык программирования Kotlin}},
+	journal = "Открытые системы",
+	number = "09",
+	year = "2011",
+	issn = "0166-218X",
+	url = "http://www.osp.ru/os/2011/09/13011550/",
+	howpublished = {\url{http://www.osp.ru/os/2011/09/13011550/}}
 }
 
 @ONLINE{JsIsAsm1,
@@ -161,12 +161,60 @@ author = {Андрей Бреслав}
 	howpublished = {\url{https://developers.google.com/octane/}}
 }
 
-@ARTICLE{ Havlak,
-author = {Robert Hundt},
-title = {{Loop Recognition in C++/Java/Go/Scala}},
-journal = "Scala Days 2011",
-url = "https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf",
-howpublished = {\url{https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf}}
+@ARTICLE{Havlak,
+	author = {Havlak Paul},
+	title = {{Nesting of reducible and irreducible
+loops}},
+	journal = "ACM Transactions on Programming Languages and Systems",
+	volume = "19",
+	number = "4",
+	pages = " 557-567",
+	month = "July",
+	year = "1997",
+	url = "http://dl.acm.org/citation.cfm?id=262005",
+	howpublished = {\url{http://dl.acm.org/citation.cfm?id=262005}}
+}
+
+@ARTICLE{HavlakBench,
+	author = {Robert Hundt},
+	title = {{Loop Recognition in C++/Java/Go/Scala}},
+	journal = "Scala Days 2011",
+	url = "https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf",
+	howpublished = {\url{https://days2011.scala-lang.org/sites/days2011/files/ws3-1-Hundt.pdf}}
+}
+
+@ONLINE{Richards,
+	author = {Martin Richards},
+	title = {Richards Bench},
+	howpublished = {\url{http://www.cl.cam.ac.uk/~mr10/Bench.html}}
+}
+
+
+@ONLINE{DeltaBlue,
+	author = {John Maloney, Mario Wolczko},
+	title = {DeltaBlue Constraint Solver},
+	howpublished = {\url{http://www.cs.washington.edu/research/constraints/deltablue/}}
+}
+
+@ARTICLE{DeltaBlueST,
+	author = {Bjorn N. Freeman-Benson and John Maloney},
+	title = {The DeltaBlue Algorithm: An Incremental Constraint Hierarchy Solver},
+	journal = "Communications of the ACM",
+	month = "January",
+	year = "1990",
+	note = "University of Washington TR 89-08-06",
+}
+
+@ARTICLE{DeltaBlue2,
+	author = {Michael Sannella and other},
+	title = {Multi-way versus One-way Constraints in User Interfaces: Experience with the DeltaBlue Algorithm},
+	journal = "Software--Practice and Experience",
+	volume = "23",
+	number = "5",
+	pages = "529-566",
+	year = "1993",
+	note = "Preprint published as UW Tech Report 92-07-05",
+	url = "http://www.cs.washington.edu/research/constraints/solvers/spe-deltablue-93.html"
 }
 
 @ONLINE{something,
