--- a/parts/3_impl.tex
+++ b/parts/3_impl.tex
@@ -1,6 +1,7 @@
 \chapter{Реализация}
 
 \section{Выбор языков для сравнения}
+
 хочется не только понимать что мы улучшились хочется и посмотреть как мы выглядим на фоне остальных
 
 С кем сравниваемся?
@@ -36,23 +37,31 @@ CoffeeScript и TypeScript нет, во многом это объясняетс
 Ни один современный проект по разработке JavaScript виртуальной машины не обходится без тестов производтиельности. В этих проектах в основном используются два типа тестов. Первый тип это так называемые <<микро-бенчмарки>> -- это тесты созданные для измерения отдельных маленьких частей системы. Ярким пример омтаких тестов является набор тестов от разработчиков из Mozilla -- Dromaeo \cite{Dromaeo}  Другой тип используемых тестов, который часто называют <<макро-бенчмарками>> -- это <<реальные>> программы, либо программы имитирующие поведение <<реальных>> программ. Ярыми привереженцами такого похода являются разработчки использующейся в Chrome вритуальной машины V8 \cite{V8:Benchmarks, Octane}. Все эти тесты находятся в открытом доступе и разработчки проверяют результаты свой работы так же и на тестах кокурентов.
 
 В рамках данной работы для реализации тестов производительность было решено взять за основу тесты Richards и DeltaBlue, которые из набора тестов используемого коммандой V8 \cite{V8:Benchmarks}. Так же в значительной мере на выбор повлиял тот факт что данные тесты являются основными в проекте Dart.
-Кроме этих двух тестов было решено реализовать тест производительности Havlak, разработанный в компании Google для сравнения таких языков как C++, Java, Go и Scala по таким критериям как: производительность, объем кода, обхем бинарника, объем используемой памяти \cite{Havlak}. Позже разработчики из компании Google так же реализовали данный тест и на многих других языках, например на Dart и JavaScript.
-Такой выбор тестов позволил исключить предвзятость при реализации тестов производительности на других языках, т.к. для сравнения с другими языками используются проверенные годами и написанные специалистами тесты. К тому же, все эти тесты находятся в открытом доступе и любой желающий сможет повторить приведенные в данной работе эксперементы.
+Кроме этих двух тестов было решено реализовать тест производительности Havlak, разработанный в компании Google для сравнения таких языков как C++, Java, Go и Scala по таким критериям как: время выполнения теста, объем кода, размер программы после компиляции, объем памяти используемой во время работы теста \cite{HavlakBench}. Позже разработчики из компании Google так же реализовали данный тест и на многих других языках, например на Dart и JavaScript.
+Такой выбор тестов позволил исключить предвзятость при реализации тестов производительности на других языках, т.к. для сравнения с другими языками используются проверенные годами и написанные специалистами тесты. К тому же, все эти тесты находятся в открытом доступе и любой желающий сможет повторить приведенные в данной работе эксперименты.
+
+\subsection{Тест производительности Richards}
+
+Этот тест был написан для сравнения различных языков и различных их реализаций на . Тест не
+Оригинальная версия теста была написана Мартином ричардсом в 1999 году на языке программирования BCPL. В данном тесте симулируется работа ядра операционной системы.
+Тест фокусируется на проверки скорости чтения и записа данных, а так же на проверке скорости вызова функций и методов. Как и у многих тестов, данный тест имеет вторичный фокус -- оптимизация кода и устраниние избыточного кода.
+\cite{Richards}
+
+\subsection{Тест производительности DeltaBlue}
+
+DeltaBlue -- это односторонний constraint solver написанный Джоном Малони и Марио Волчко начале 90х. Изначально был написан на языке Smalltalk, позднее был переписан на множество языков. Данный алгоритм часто используется в качестве теста производительности для проверки реализации полиморфизма в языке. Так же, для языков с автоматическим управлением памятью данный тест позволяет протестировать эффективность работы сборщика мусора. Этому способствует то что алгоритм предполагает создание большого количества, в основном, недолго живущих объектов.
+\cite{DeltaBlueST, DeltaBlue, DeltaBlue2}
+
+\subsection{Тест производительности Havlak}
+
+В данном тесте используется алгоритм поиска и преобразования циклов описанный в статье Паула Хавлака ”Nesting of reducible and irreducible
+loops”. \cite{Havlak} Тест был разработан в компании Google для сравнения таких языков как C++, Java, Go и Scala по таким критериям как: время выполнения теста, объем кода, размер программы после компиляции, объем памяти используемой во время работы теста \cite{HavlakBench}. Позже разработчики из компании Google так же реализовали данный тест и на многих других языках, например на Dart и JavaScript. Данный тест хорошо подходит для проверки использующихся в языке контейнеров. Кроме того, данный тест позволяет проверить на сколько хорошо в языке реализован контроль за ресурсами и на сколько хорошо работает сборщик мусора.
+
+\section{Тестирование и анализ результатов}
+
+\subsection{Методика тестирования}
 
 \subsection{Richards}
-Richards
-OS kernel simulation benchmark, originally written in BCPL by Martin Richards (539 lines).
-Main focus: property load/store, function/method calls
-Secondary focus: code optimization, elimination of redundant code
-
-Richards
-Данный бенчмар симулирует работу ядра ОС, написан в конце 90х Мартином Ричардсом.
-Основной фокс теста -- это чтение и запись данных и вызов функций- методов
-
-OS kernel simulation benchmark, originally written in BCPL by Martin Richards (539 lines).
-Main focus: property load/store, function/method calls
-Secondary focus: code optimization, elimination of redundant code
-
 ---
 Richards: Выводы
 
@@ -60,15 +69,7 @@ Richards: Выводы
 Сделать аналог импорта, предоставив тем самым возможность кратко обращаться к объектам и их полям
 Необходимо упростить структуру генерируемого кода
 
-\subsection{Deltablue}
-
-Deltablue
-constraint solver написанный John Maloney and Mario Wolczko в конце 80х, начале 90х (?)
-Основной фокус данного теста -- полиморфизм, ООП стиль программирования. В тесте очень часто и в большем количестве создаются объекты. Эти объекты живут не очень долго и видимо этот тест так же подходит для тестирования GC, но это нас не сильно интересует
-
-One-way constraint solver, originally written in Smalltalk by John Maloney and Mario Wolczko (880 lines).
-Main focus: polymorphism
-Secondary focus: OO-style programming
+\subsection{DeltaBlue}
 
 ---
 <<Прямой>> вызов конструкторов
@@ -81,11 +82,5 @@ DeltaBlue: Выводы
 Инициализировать все поля класса в одном порядке
 Заменить или оптимизировать Kotllin.equals
 
-\subsection{Havlak}
-
-\section{Тестирование и анализ результатов}
-\subsection{Методика тестирования}
-\subsection{Richards}
-\subsection{DeltaBlue}
 \subsection{Havlak}
 \section {Реализация оптимизаций}
