add new sections

--- a/defs.tex
+++ b/defs.tex
@@ -29,6 +29,8 @@
 \usepackage{float}
 \usepackage{url}
 \usepackage[unicode=true]{hyperref}
+\usepackage{caption}
+\usepackage{subcaption}
 
 \lstset{
 captionpos=b,
@@ -39,7 +41,7 @@ keywordstyle=\bfseries,
 % basicstyle=\ttfamily\color{black},
 % keywordstyle=\bfseries\color{keyword},
 showstringspaces=false,
-morekeywords={fun, val, var, import, object, classpath, let, for, do, select, in, return, new, null, class}
+morekeywords={fun, val, var, import, object, classpath, let, for, do, select, in, return, new, null, class, function}
 }
 
 \renewcommand{\lstlistingname}{Листинг}
